# cankar-gtp

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/agents/: corpus-qa.md  design-review.md
.claude/skills/adr/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/deps-update/: SKILL.md
.claude/skills/design-brief/: SKILL.md
.claude/skills/public-hygiene/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  ruleset-main.json
.github/workflows/: ci.yml  codeql.yml  pre-commit-autoupdate.yml  roadmap-gate.yml
cankar/: README.md  __init__.py  clean.py  cli.py  manifest.py  schema.py
cankar/core/: README.md  __init__.py  encoding.py  errors.py  http.py  jsonl.py  manifest.py  metrics.py  paths.py  reports.py  schema.py  textsim.py
cankar/corpus/: README.md  __init__.py  catalog.py  clean.py  cli.py  coverage.py  dedup.py  dlib.py  ingest.py  merge.py  ocr_clean.py  quality_gate.py  reconcile.py  registry.py  seed.py  shard.py  stats.py  wikipedia.py  wikipedia_clean.py  wikisource.py  wikivir.py
cankar/evals/: README.md  __init__.py  bpb.py  cli.py  holdout.py  vendored_bpb.py
cankar/tokenizer/: README.md  __init__.py  chunk.py  cli.py  evaluate.py  stats.py  train.py  vendored.py
configs/: README.md
configs/corpus/: authors.toml
configs/tokenizer/: probes.toml
data/: README.md
docs/: README.md
docs/decisions/: 0001-nanochat-as-training-codebase.md  0002-public-monorepo-from-day-one.md  0003-validation-ladder-for-agent-driven-development.md  0004-works-registry-as-source-of-truth.md  0005-stage-subpackage-layout.md  0006-design-first-controls.md  0007-structure-law.md  0008-code-architecture-standards.md  0009-thematic-merge-commits.md  0010-roadmap-gate.md  0011-tokenizer-stage.md  0012-context-length-and-chunking.md  0013-eval-harness-holdout.md  0014-misattribution-exclusion.md
ops/: README.md  check-roadmap-pr.sh  github-repo-setup.sh
registry/: README.md  askerc.jsonl  collisions.md  coverage-askerc.md  coverage-cankar.md  coverage-erjavec.md  coverage-govekar.md  coverage-jenko.md  coverage-jurcic.md  coverage-kersnik.md  coverage-kette.md  coverage-kveder.md  coverage-levstik.md  coverage-milcinski.md  coverage-murn.md  coverage-stritar.md  coverage-tavcar.md  coverage-trdina.md  erjavec.jsonl  govekar.jsonl  jenko.jsonl  jurcic.jsonl  kveder.jsonl  murn.jsonl  tavcar.jsonl  trdina.jsonl
registry/datasets/: README.md
registry/datasets/corpus/: askerc.manifest.json  cankar.manifest.json  corpus.manifest.json  dlib-cankar-gapfill.manifest.json  dlib-cankar.manifest.json  erjavec.manifest.json  govekar.manifest.json  jenko.manifest.json  jurcic.manifest.json  kersnik.manifest.json  kette.manifest.json  kveder.manifest.json  levstik.manifest.json  milcinski.manifest.json  murn.manifest.json  stritar.manifest.json  tavcar.manifest.json  trdina.manifest.json  wikipedia.manifest.json
registry/datasets/tokenizer/: chunks.manifest.json  (+3 more)
registry/evals/: README.md  holdout.json
registry/reports/: README.md  chunks.md  collisions.md  corpus-quality.md  coverage-askerc.md  coverage-cankar.md  coverage-erjavec.md  coverage-govekar.md  coverage-jenko.md  coverage-jurcic.md  coverage-kersnik.md  coverage-kette.md  coverage-kveder.md  coverage-levstik.md  coverage-milcinski.md  coverage-murn.md  coverage-stritar.md  coverage-tavcar.md  coverage-trdina.md  dlib-reconcile.md  eval-holdout.md  merge.md  near-duplicates.md  token-stats.md  tokenizer-eval.md
registry/works/: NOTES.md  README.md  cankar.jsonl  collision_resolution.toml  kersnik.jsonl  kette.jsonl  levstik.jsonl  milcinski.jsonl  stritar.jsonl
scripts/: crawl_wikivir.py
scripts/corpus/: build_registry.py  crawl_dlib.py  crawl_wikivir.py  ingest_author.py  report_coverage.py  validate_registry.py
tests/: README.md  test_clean.py  test_schema.py
tests/core/: test_schema.py
tests/corpus/: test_catalog.py  test_clean.py  test_dedup.py  test_ingest.py  test_merge.py  test_ocr_clean.py  test_quality_gate.py  test_reconcile.py  test_registry.py  test_shard.py  test_stats.py  test_wikipedia.py  test_wikipedia_clean.py
tests/evals/: test_bpb.py  test_holdout.py  test_vendored_bpb_drift.py
tests/fixtures/: catalog_seznam_sample.wikitext  jure_sample.cp1250  jure_sample.expected.txt  noc.expected.txt  poem_ubezni_kralj.wikitext
tests/structure/: test_layout.py
tests/tokenizer/: test_chunk.py  test_evaluate.py  test_train.py  test_vendored_drift.py
(+26 files in other folders)
