[project]
name = "cankar-gtp"
version = "0.1.0"
description = "A from-scratch Slovene micro-LLM in the voice of Ivan Cankar"
authors = [{ name = "Matic Korošec" }]
requires-python = ">=3.11"

dependencies = [
    # Phase 1 - corpus
    "requests>=2.32",
    "mwparserfromhell>=0.6.6",
    "pydantic>=2.7",
    "datasketch>=2.0.0",
    # Phase 2+ - tokenizer/training
    "torch>=2.13.0",
    "rustbpe==0.1.0",
    "tiktoken>=0.11.0",
]

[project.urls]
Homepage = "https://nextgen-solutions.xyz"
Repository = "https://github.com/Mult1Hunter/cankar-gtp"

[project.scripts]
cankar = "cankar.cli:main"

[dependency-groups]
dev = [
    "import-linter>=2.0",
    "mypy>=1.11",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "ruff>=0.15",
]
tooling = [
    "graphifyy>=0.9.23",
]

# Remaining phase deps (tokenizer libs, anthropic, wandb) are added when their
# phases start - keep the lockfile honest about what each stage needs.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cankar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.importlinter]
root_package = "cankar"

[[tool.importlinter.contracts]]
name = "core is the bottom layer; stages sit above it and stay independent"
type = "layers"
layers = ["cankar.corpus | cankar.tokenizer | cankar.evals", "cankar.core"]

[tool.mypy]
files = ["cankar"]
# 3.12, not the 3.11 requires-python floor: numpy 2.x stubs (pulled in via
# torch, Phase 2) use PEP 695 `type` statements that 3.11 mypy cannot parse.
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["mwparserfromhell.*", "datasketch.*", "rustbpe.*"]
ignore_missing_imports = true
